--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -1,7 +1,7 @@
 <nav class="nav-extended navbar-fixed">
     <div class="nav-content">
         <div class="left">
-            <img class="navlogo" height="25px" src="app/assets/img/Logo_Koomkin.png" alt="">
+            <img class="navlogo" height="25px" src="app/assets/img/wlogo.png" alt="">
         </div>
         <div class="right">
             <ul class="tabs tabs-transparent hide-on-med-and-down">
@@ -26,8 +26,8 @@
     <div class="parallax-container valign-wrapper bluem-div">
         <div class="row">
             <div class="col l5 m5 s12">
-                <img id="phone" class="animated zoomIn" src="app/assets/img/solo-telefono.png" alt="">
-                <img id="lead" class="animated zoomIn" src="app/assets/img/solo-lead.png" alt="">
+                <img id="phone" class="animated zoomIn" src="app/assets/img/telefono-sin-Lead.png" alt="">
+                <img id="lead" class="animated zoomIn" src="app/assets/img/solo-el-Lead.png" alt="">
             </div>
             <div id="first" class="col l7 m7 s12 animated zoomIn">
                 <img id="logo" src="app/assets/img/Logo_Koomkin.png" alt="Koomkin Logo">
@@ -40,22 +40,22 @@
         </div>
     </div>
     <div class="parallax-container valign-wrapper blue-div">
-        <div class="container">
-            <div class="row">
-                <div class="col l7 m7 s12 cinta">
-                    <img class="up" src="app/assets/img/cinta.jpg" alt="">
-                    <img class="down" src="app/assets/img/cinta.jpg" alt="">
-                    <img class="up" src="app/assets/img/cinta.jpg" alt="">
-                    <img class="down" src="app/assets/img/cinta.jpg" alt="">
+        <div class="row">
+            <div id="cinta" class="col l7 m7 s12">
+                <img class="up" src="app/assets/img/1.png" alt="">
+                <img class="down" src="app/assets/img/2.png" alt="">
+                <img class="up" src="app/assets/img/3.png" alt="">
+                <img class="down" src="app/assets/img/4.png" alt="">
+            </div>
+            <div id="negocios" class="col l5 m5 s12 cinta2">
+                <div class="graphicElement">
                 </div>
-                <div class="col l5 m5 s12">
-                    <h1>
-                        <b>Para todos los negocios</b>
-                    </h1>
-                    <h2>Koomkin está diseñado para funcionar
-                        <b>con cualquier tipo de empresa, sin importar su giro o su tamaño.</b>
-                    </h2>
-                </div>
+                <h1>
+                    <b>Para todos los negocios</b>
+                </h1>
+                <h2>Koomkin está diseñado para funcionar
+                    <b>con cualquier tipo de empresa, sin importar su giro o su tamaño.</b>
+                </h2>
             </div>
         </div>
     </div>
@@ -63,6 +63,8 @@
         <div class="container sec2">
             <div class="row">
                 <div id="second" class="col l7 m7 s12 animated fadeInUp">
+                    <div class="graphicElement">
+                    </div>
                     <h1>
                         <b>Un algoritmo inteligente</b>
                     </h1>
@@ -81,7 +83,7 @@
                     </h2>
                 </div>
                 <div class="col l5 m5 s12 animated fadeInDown">
-                    <img class="centrarImg" src="app/assets/img/2.png" alt="">
+                    <img class="centrarImg" src="app/assets/img/app.png" alt="">
                 </div>
             </div>
         </div>
@@ -90,11 +92,11 @@
         <div class="container">
             <div class="row">
                 <div class="col l7 m7 s12">
-                    <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
-                    <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
-                    <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+                    <img id="app" class="animated bounceInDown" src="app/assets/img/app.png" alt="">
                 </div>
                 <div class="col l5 m5 s12">
+                    <div class="graphicElement">
+                    </div>
                     <h1>
                         <b>Información a tiempo</b>
                     </h1>
@@ -105,11 +107,15 @@
             </div>
         </div>
     </div>
-    <div class="parallax-container valign-wrapper">
+    <div class="parallax-container valign-wrapper social-div">
         <div class="container">
+            <div class="graphicElement">
+            </div>
+            <h1 style="color: #3a4d57">
+                <b>Optimiza tu campaña</b>
+            </h1>
             <div class="row">
                 <div class="col l8 m8 s12">
-                    <h1 style="color: #3a4d57">OPTIMIZA TU CAMPAÑA</h1>
                     <h2>Evalúa tus prospectos y Koomkin logic se configura para
                         <b>mandarte solamente prospectos que te sirvan.</b>
                     </h2>
@@ -120,36 +126,77 @@
             </div>
         </div>
     </div>
+    <div class="parallax-container valign-wrapper gray-div">
+        <div class="container sec2">
+            <div class="row">
+                <div id="second" class="col l7 m7 s12 animated fadeInUp">
+                    <div class="graphicElement">
+                    </div>
+                    <h1>
+                        <b>Nuestro equipo</b>
+                    </h1>
+                    <h2 class="socialMedia">Contamos con más de 30 expertos para brindarte
+                        <b>las mejores herramientas digitales y el mejor servicio.</b>
+                    </h2>
+                </div>
+            </div>
+            <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Únete a nuestro equipo</a>
+            <div id="modal1" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <h4>Vacantes</h4>
+                    <p>Inicia sesión con LinkedIn</p>
+                    <p>o</p>
+                    <p>Adjunta tu CV aquí</p>
+                    <input type="file">
+                </div>
+                <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Salir</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="parallax-container valign-wrapper dblue-div">
         <div class="container">
             <div class="row">
                 <div class="socialMedia">
                     <div class="col l12 m12 s12">
-                        <h1>DATOS DIVERTIDOS</h1>
+                        <div class="graphicElement">
+                        </div>
+                        <h1>
+                            <b>Datos divertidos</b>
+                        </h1>
                     </div>
-                    <div class="col l3 m3 s3">
-                        <h2>+8,000</h2>
+                    <div class="col l3 m3 s12">
+                        <div class="col l12 m12 s12">
+                            <h2 class="counter timer count-title count-number" data-to="8000" data-speed="1500"></h2>
+                        </div>
+                        <div class="col l12 m12 s12">
+                            <h5>Clientes contentos</h5>
+                        </div>
                     </div>
-                    <div class="col l3 m3 s3">
-                        <h2>+50,000</h2>
+                    <div class="col l3 m3 s12">
+                        <div class="col l12 m12 s12">
+                            <h2 class="counter timer count-title count-number" data-to="50000" data-speed="9000"></h2>
+                        </div>
+                        <div class="col l12 m12 s12">
+                            <h5>Impresiones en los principales canales digitales</h5>
+                        </div>
                     </div>
-                    <div class="col l3 m3 s3">
-                        <h2>+11,000</h2>
+                    <div class="col l3 m3 s12">
+                        <div class="col l12 m12 s12">
+                            <h2 class="counter timer count-title count-number" data-to="11000" data-speed="1500"></h2>
+                        </div>
+                        <div class="col l12 m12 s12">
+                            <h5>Prospectos mensuales para nuestros clientes</h5>
+                        </div>
                     </div>
-                    <div class="col l3 m3 s3">
-                        <h2>+16,000</h2>
-                    </div>
-                    <div class="col l3 m3 s3">
-                        <h5>CLIENTES CONMTENTOS</h5>
-                    </div>
-                    <div class="col l3 m3 s3">
-                        <h5>IMPRERSIONES EN LOS PRINCIPALES CANALES DIGITALES</h5>
-                    </div>
-                    <div class="col l3 m3 s3">
-                        <h5>PROSPECTTOS MENSUALES PARA NUESTROS CLIENTES</h5>
-                    </div>
-                    <div class="col l3 m3 s3">
-                        <h5>TAZAS DE CAFÉ</h5>
+                    <div class="col l3 m3 s12">
+                        <div class="col l12 m12 s12">
+                            <h2 class="counter timer count-title count-number" data-to="16000" data-speed="1500"></h2>
+                        </div>
+                        <div class="col l12 m12 s12">
+                            <h5>Tazas de café</h5>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -157,7 +204,11 @@
     </div>
     <div class="parallax-container valign-wrapper">
         <div class="container">
-            <h1 style="color: #3a4d57;">CONTACTO</h1>
+            <div class="graphicElement">
+            </div>
+            <h1 style="color: #3a4d57;">
+                <b>Contacto</b>
+            </h1>
             <div class="row">
                 <div class="col l6 m6 s12">
                     <form action="">
@@ -166,7 +217,7 @@
                             <label for="last_name">Nombre</label>
                         </div>
                         <div class="input-field">
-                            <input id="last_name" type="text" class="validate">
+                            <input id="last_name" type="email" class="validate">
                             <label for="last_name">Email</label>
                         </div>
                         <div class="input-field">
@@ -178,9 +229,11 @@
                             <label for="last_name">Mensaje</label>
                         </div>
                         <a id="enviar" class="waves-effect waves-light btn">Enviar</a>
+                        <br>
+                        <br>
                     </form>
                 </div>
-                <div class="col l6 m6 s12">
+                <div class="adress col l6 m6 s12">
                     <b>Queremos escuchar sobre ti</b>
                     <p>Av. Horacio 1844 - 7C</p>
                     <p>Polanco, CDMX</p>
