fixed CSS animations

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -57,19 +57,19 @@
             <hr>
             <h2 style="color: white">Te presentamos el canal de ventas
                 <b></b>No. 1 para PYMES</b> en México.</h2>
-            <a id="descubre" class="btn-large" href="#second">Descubre más</a>
+            <a  id="descubre" class="btn-large" href="#second">Descubre más</a>
         </div>
     </div>
 </div>
 <div id="second" class="parallax-container valign-wrapper blue-div">
     <div class="row">
-        <div id="cinta" class="col l7 m7 s12">
-            <img class="up" src="app/assets/img/1.png" alt="">
-            <img class="down" src="app/assets/img/2.png" alt="">
-            <img class="up" src="app/assets/img/3.png" alt="">
-            <img class="down" src="app/assets/img/4.png" alt="">
+        <div id="cinta" class="col l6 m6 s12">
+            <img class="up1" src="app/assets/img/1.png" alt="">
+            <img class="down1" src="app/assets/img/2.png" alt="">
+            <img class="up2" src="app/assets/img/3.png" alt="">
+            <img class="down2" src="app/assets/img/4.png" alt="">
         </div>
-        <div id="negocios" class="col l5 m5 s12 cinta2">
+        <div id="negocios" class="col l6 m6 s12">
             <div class="graphicElement">
             </div>
             <div class="secondElements invisible">
@@ -172,24 +172,26 @@
         <div id="modal1" class="modal modal-fixed-footer">
             <div class="modal-content">
                 <h4>Vacantes</h4>
-                <form id="gform" action="POST" action="https://script.google.com/macros/s/AKfycbw_XxVbquTDFI9NMSeNEjXgZVrw_akG_uRwUzTp6aRkfxuzncA/exec">
-                    <div class="input-field">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Nombre</label>
-                    </div>
-                    <div class="input-field">
-                        <input id="last_name" type="email" class="validate">
-                        <label for="last_name">Email</label>
-                    </div>
-                    <div class="input-field">
-                        <input id="last_name" type="number" class="validate">
-                        <label for="last_name">Teléfono</label>
-                    </div>
-                    <p>Adjunta tu CV aquí</p>
-                    <input type="file">
-                    <br>
-                    <a id="enviar" class="waves-effect waves-light btn center">Enviar</a>
-                </form>
+                <div class="container">
+                    <form id="gform" action="POST" action="https://script.google.com/macros/s/AKfycbw_XxVbquTDFI9NMSeNEjXgZVrw_akG_uRwUzTp6aRkfxuzncA/exec">
+                        <div class="input-field">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Nombre</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="last_name" type="email" class="validate">
+                            <label for="last_name">Email</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="last_name" type="number" class="validate">
+                            <label for="last_name">Teléfono</label>
+                        </div>
+                        <p>Adjunta tu CV aquí</p>
+                        <input type="file">
+                        <br>
+                        <a id="enviar" class="waves-effect waves-light btn center">Enviar</a>
+                    </form>
+                </div>
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Salir</a>
